# sec-kill-project-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  consumer.py  docker-compose.yml  main.py  pyproject.toml  startup.py
app/: main.py  pyproject.toml  startup.py
app/constant/: time.py
app/consumer/: order_consumer.py
app/core/: config.py
app/mock/: mock_products.py
app/models/dto/: dto_sales.py
app/models/http/: base_response.py
app/rest/: __init__.py
app/rest/endpoints/: flash_sales.py
app/services/: kafka_consumer.py  kafka_producer.py  memory_cache.py  redis_service.py
app/services/sales/: flash_sales_service.py
app/static/: swagger-ui.css
scripts/: mock_user_orders.py
static/: swagger-ui-bundle.js
