[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "cachetools>=6.2.1",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "redis>=6.4.0",
    "uvicorn>=0.37.0",
]


[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
